
* Locale interpretation propagates mixins along the locale hierarchy.
The currently only available mixins are the equations used to map
local definitions to terms of the target domain of an interpretation.

* Reactivated diagnositc command 'print_interps'.  Use 'print_interps l'
to print all interpretations of locale l in the theory.  Interpretations
in proofs are not shown.


*** HOL ***

* Most rules produced by inductive and datatype package
have mandatory prefixes.
INCOMPATIBILITY.

* New proof method "smt" for a combination of first-order logic
with equality, linear and nonlinear (natural/integer/real)
arithmetic, and fixed-size bitvectors; there is also basic
support for higher-order features (esp. lambda abstractions).
It is an incomplete decision procedure based on external SMT
solvers using the oracle mechanism.

* Reorganization of number theory:
  * former session NumberTheory now named Old_Number_Theory
  * new session Number_Theory by Jeremy Avigad; if possible, prefer this.
  * moved legacy theories Legacy_GCD and Primes from Library/ to Old_Number_Theory/;
  * moved theory Pocklington from Library/ to Old_Number_Theory/;
  * removed various references to Old_Number_Theory from HOL distribution.
INCOMPATIBILITY.

* Theory GCD now has functions Gcd/GCD and Lcm/LCM for the gcd and lcm
of finite and infinite sets. It is shown that they form a complete
lattice.

* Split off prime number ingredients from theory GCD
to theory Number_Theory/Primes;

* Class semiring_div requires superclass no_zero_divisors and proof of
div_mult_mult1; theorems div_mult_mult1, div_mult_mult2,
div_mult_mult1_if, div_mult_mult1 and div_mult_mult2 have been
generalized to class semiring_div, subsuming former theorems
zdiv_zmult_zmult1, zdiv_zmult_zmult1_if, zdiv_zmult_zmult1 and
zdiv_zmult_zmult2.  div_mult_mult1 is now [simp] by default.
INCOMPATIBILITY.

* New testing tool "Mirabelle" for automated (proof) tools. Applies